[package]
name = "xenvoterleaderboardapi"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
log = "0.4"
env_logger = "0.10"
thiserror = "1.0.63"
mongodb = "2.0"